# hocuspocus-rs-ws

./: Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
examples/example/: Cargo.toml
examples/example/src/: main.rs
examples/sample-client/: README.md  index.html  package.json
examples/sample-client/src/: App.svelte
examples/sample-client/src/lib/: Tiptap.svelte
hocuspocus-rs-ws/: Cargo.toml  LICENSE
hocuspocus-rs-ws/src/: api_types.rs  client_connection.rs  doc_connection.rs  doc_sync.rs  hocuspocus.rs  lib.rs  sync_kv.rs  types.rs
hocuspocus-rs-ws/src/authenticator/: mod.rs  simple.rs
hocuspocus-rs-ws/src/store/: memory.rs  mod.rs  s3.rs
hocuspocus-rs-ws/src/sync/: awareness.rs  mod.rs
