[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.72"
hocuspocus-rs-ws = { path = "../hocuspocus-rs-ws" }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
